kubernetes/rumble/rumble.yaml
kind: Service
apiVersion: v1
metadata:
  name: rumble
  namespace: rumble
spec:
  selector:
    app: rumble
  type: NodePort
  ports:
  - name: port-0
    nodePort: 32000
    port: 32000
    protocol: TCP
    targetPort: 32000
  - name: port-1
    nodePort: 32001
    port: 32001
    protocol: TCP
    targetPort: 32001
  - name: port-2
    nodePort: 32002
    port: 32002
    protocol: TCP
  - name: port-3
    nodePort: 32003
    port: 32003
    protocol: TCP
  - name: port-4
    nodePort: 32004
    port: 32004
    protocol: TCP
  - name: port-5
    nodePort: 32005
    port: 32005
    protocol: TCP
  - name: port-6
    nodePort: 32006
    port: 32006
    protocol: TCP
  - name: port-7
    nodePort: 32007
    port: 32007
    protocol: TCP
  - name: port-8
    nodePort: 32008
    port: 32008
    protocol: TCP
  - name: port-9
    nodePort: 32009
    port: 32009
    protocol: TCP
  - name: service-port # do not use format of port-n
    nodePort: 30000
    port: 8080
    protocol: TCP
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rumble
  namespace: rumble
  labels:
    app: rumble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rumble
  template:
    metadata:
      labels:
        app: rumble
    spec:
      hostname: rumble
      containers:
      - name: rumble-image
        image: mrceyhun/rumble-go:latest
        imagePullPolicy: Always
        args:
        - /bin/bash
        - /data/run.sh
        tty: true
        stdin: true
        ports:
        - containerPort: 32000
          name: port-0
        - containerPort: 32001
          name: port-1
        - containerPort: 32002
          name: port-2
        - containerPort: 32003
          name: port-3
        - containerPort: 32004
          name: port-4
        - containerPort: 32005
          name: port-5
        - containerPort: 32006
          name: port-6
        - containerPort: 32007
          name: port-7
        - containerPort: 32008
          name: port-8
        - containerPort: 32009
          name: port-9
        - containerPort: 30000
          name: service-port
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
             cpu: 1000m
             memory: 500Mi
        volumeMounts:
        - name: rumble-secrets
          mountPath: /etc/rumble
          readOnly: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "export > /etc/environment"]
      volumes:
      - name: rumble-secrets
        secret:
          secretName: rumble-secrets
