kubernetes/rumble/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: rumble
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
spec:
  rules:
  - host: "test-cluster-jnbxujghdusq-node-0.cern.ch"
    http:
      paths:
      - path: /jsoniq
        backend:
          serviceName: rumble
          servicePort: 8001
